# tls_client_server

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
certs/: client_cert.crt  client_key.key  rootCA.crt  rootCA.key  server_cert.crt  server_key.key
include/: clientmanager.hpp  socket.hpp  tls.hpp  tlsclient.hpp  tlsserver.hpp  tlssocket.hpp
src/: socket.cpp  tls.cpp  tlsclient.cpp  tlsserver.cpp  tlssocket.cpp
tests/: CMakeLists.txt  test_tlsclient.cpp  test_tlsserver.cpp
